feat: getFollowee and getFollower functionalites
