# src/user-service/docs/swagger.json
@@ -351,7 +351,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/models.UserRegister"
                         }
                     }
                 ],
@@ -487,25 +487,11 @@
                 "paging": {}
             }
         },
-        "models.Role": {
-            "type": "object",
-            "properties": {
-                "role_id": {
-                    "type": "integer"
-                },
-                "role_name": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.User": {
+        "models.UserRegister": {
             "type": "object",
             "properties": {
                 "password": {
                     "type": "string"
-                },
-                "role": {
-                    "$ref": "#/definitions/models.Role"
                 },
                 "role_id": {
                     "type": "integer"
